--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animate-height": "^2.0.21",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-images-upload": "^1.2.8",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
