--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "apolloReact",
+  "name": "apolloreact",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "apollo-server": "^2.14.1",
