--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.1.0",
+    "graphql": "0.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "uuid": "^8.1.0"
